--- a/views/restaurants/register.handlebars
+++ b/views/restaurants/register.handlebars
@@ -1,30 +1,69 @@
-<form class="register" method="POST">
-    <div>
-        <label for="name">Restaurant Name</label>
-        <input type="text" name="name" placeholder="Restaurant Name:" required>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login</title>
+         <link rel="stylesheet" href="/public/site.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+       
+    </head>
 
-    <div>
-        <label for="email">Email</label>
-        <input type="email" name="email" placeholder="Email ID:" required>
-    </div>
+    <body>
+        <main>
+            <div class="jumbotron">
+                <div class="container">
+                    <h1>Login Page</h1>
+                </div>
+            </div>
 
-    <div>
-        <label for="phone-no">Contact Number</label>
-        <input type="number" name="phone-no" placeholder="Conatact Number" required>
-    </div>
+            <div class="container">
+                <fieldset>
+                <legend>Enter Restaurant Registration Information Here</legend>
 
-    <div>
-        <label for="password">Password</label>
-        <input type="password" name="password" placeholder="Password" required>
-    </div>
+                <form class="register" action="/restaurantRegister" method="POST">
+                    <div class="form-group">
+                        <label for="name">Restaurant Name</label>
+                        <input type="text" name="name" placeholder="Restaurant Name:" required>
+                    </div>
 
-    <div>
-        <label for="confirm-password">Confirm Password</label>
-        <input type="password" name="confirm-password" placeholder="Confirm Password" required>
-    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control"  name="email" placeholder="Email ID:" required>
+                    </div>
 
-    <div>
-        <button type="submit">Register</button>
-    </div>
-</form>
+                    <div> class="form-group"
+                        <label for="phone-no">Contact Number</label>
+                        <input type="number" class="form-control" name="phone-no" placeholder="Conatact Number" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" name="password" placeholder="Password" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="confirm-password">Confirm Password</label>
+                        <input type="password" class="form-control" name="confirm-password" placeholder="Confirm Password" required>
+                    </div>
+
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </div>
+                </form>
+                </fieldset>
+            </div>
+           </main>
+            {{#if hasError}}
+                {{#each errors}}
+                    <ul>
+                    <li class="error">
+                        {{this}}
+                    </li>
+                    </ul>
+                    {{/each}}
+            {{/if}}
+        
+    </body>
+</html>
