--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,29 @@
         </header>
         
         <div class="col-sm-6">
-            {{{body}}}
+            <ul>
+                <li>
+                    <a id="reservation" href="/reservation"> Make a Table Reservation</a>
+                </li>
+                <li>
+                <a id="userLogin" href="/userLogin">User Login Page</a>
+                </li>
+                <li>
+                    <a id="userRegister" href="/userRegister">User registration Page</a>
+                </li>
+                <li>
+                    <a id="restarantLogin" href="/restaurantLogin">Restaurant Login Page</a>
+                </li>
+                <li>
+                    <a id="restaurantRegister" href="/restaurantRegister">Restaurant Register Page</a>
+                </li>
+                <li>
+                    <a id="reviews" href="/reviews">Review Page</a>
+                </li>
+                
+
+            </ul>
+            
         </div>
     </main>
 
