--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header class="header">
-            <h1>Restaurant Table Reservation Page</h1>
+            <h1>Restaurant Table Reservation Home Page</h1>
         </header>
         
         <div class="col-sm-6">
