--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -14,16 +14,16 @@
                 <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" required/>
             </div>
             <div class="form-group">
-                <label for="PhoneNumber">Enter the PhoneNumber</label>
-                <input type="number" class="form-control" id="PhoneNumber" name="PhoneNumber" placeholder="PhoneNumber" required/>
+                <label for=" phone">Enter the PhoneNumber</label>
+                <input type="number" class="form-control" id="phone" name="phone" placeholder="PhoneNumber" required/>
             </div>
             <div class="form-group">
-                <label for="City">Enter the City</label>
-                <input class="form-control" id="City" name="City" type="text" placeholder="City" required/>
+                <label for="city">Enter the City</label>
+                <input class="form-control" id="city" name="city" type="text" placeholder="City" required/>
             </div>
             <div class="form-group">
-                <label for="State">Enter the State</label>
-                <input type="text" class="form-control" id="State" name="State" placeholder="State" required/>
+                <label for="state">Enter the State</label>
+                <input type="text" class="form-control" id="state" name="state" placeholder="State" required/>
             </div>
              <div class="form-group">
                 <label for="password" >Enter the PhoneNumber</label>
