--- a/public/css/site.css
+++ b/public/css/site.css
@@ -61,7 +61,7 @@ p {
 }
 
 .footer {
-	position: fixed;
+	position:fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
@@ -78,3 +78,31 @@ p {
 	color: black;
 	text-align: center;
 }
+
+/* Add a black background color to the top navigation */
+.topnav {
+	background-color: #333;
+	overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+	background-color: #ddd;
+	color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+	background-color: #04AA6D;
+	color: white;
+  }
