--- a/views/restaurants/register.handlebars
+++ b/views/restaurants/register.handlebars
@@ -29,7 +29,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="address">Restaurant Name</label>
+                        <label for="address">Restaurant Address</label>
                         <input type="text" name="address" placeholder="Enter the Restaurant Address here" required>
                     </div>
 
