--- a/views/restaurants/register.handlebars
+++ b/views/restaurants/register.handlebars
@@ -22,14 +22,14 @@
                 <fieldset>
                 <legend>Enter Restaurant Registration Information Here</legend>
 
-                <form class="register" action="/restaurantRegister" method="POST">
+                <form class="register" action="/restaurant/register" method="POST">
                     <div class="form-group">
                         <label for="name">Restaurant Name</label>
                         <input type="text" name="name" placeholder="Enter the Restaurant Name here" required>
                     </div>
 
                     <div class="form-group">
-                        <label for="address">Restaurant Name</label>
+                        <label for="address">Restaurant Address</label>
                         <input type="text" name="address" placeholder="Enter the Restaurant Address here" required>
                     </div>
 
