--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,10 +33,10 @@
                     <a id="userRegister" href="/userRegister">User registration Page</a>
                 </li>
                 <li>
-                    <a id="restarantLogin" href="/restaurantLogin">Restaurant Login Page</a>
+                    <a id="restarantLogin" href="/restaurants/login">Restaurant Login Page</a>
                 </li>
                 <li>
-                    <a id="restaurantRegister" href="/restaurantRegister">Restaurant Register Page</a>
+                    <a id="restaurantRegister" href="/restaurants/signup">Restaurant Register Page</a>
                 </li>
                 <li>
                     <a id="reviews" href="/reviews">Review Page</a>
