--- a/views/restaurants/register.handlebars
+++ b/views/restaurants/register.handlebars
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
-         <link rel="stylesheet" href="/public/site.css" />
+         <link rel="stylesheet" href="/public/css/site.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
        
@@ -22,7 +22,7 @@
                 <fieldset>
                 <legend>Enter Restaurant Registration Information Here</legend>
 
-                <form class="register" action="/restaurant/register" method="POST">
+                <form class="register" action="/restaurants/register" method="POST">
                     <div class="form-group">
                         <label for="name">Restaurant Name</label>
                         <input type="text" name="name" placeholder="Enter the Restaurant Name here" required>
@@ -49,8 +49,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" name="password" placeholder="Password" required>
+                        <label for="passwordHash">Password</label>
+                        <input type="password" class="form-control" name="passwordHash" placeholder="Password" required>
                     </div>
 
                     <div class="form-group">
