restaurant resigtration page render is working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,10 @@
         </header>
 
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a class="active" href="/">Home</a>
+            <a href="/customer/login">User Login</a>
+            <a href="/restaurants/login">Restaurant Login</a>
+            <a href="/reviews">Reviews</a>
         </div>
 
         <div class="col-sm-6">
@@ -26,21 +26,15 @@
                 <li>
                     <a id="reservation" href="/reservation"> Make a Table Reservation</a>
                 </li>
-                <li>
-                <a id="userLogin" href="/userLogin">User Login Page</a>
-                </li>
+                
                 <li>
                     <a id="userRegister" href="/userRegister">User registration Page</a>
                 </li>
+                
                 <li>
-                    <a id="restarantLogin" href="/restaurants/login">Restaurant Login Page</a>
+                    <a id="restaurantRegister" href="/restaurants/register">Restaurant Register Page</a>
                 </li>
-                <li>
-                    <a id="restaurantRegister" href="/restaurants/signup">Restaurant Register Page</a>
-                </li>
-                <li>
-                    <a id="reviews" href="/reviews">Review Page</a>
-                </li>
+                
             </ul>
             
         </div>
