--- a/views/restaurants/register.handlebars
+++ b/views/restaurants/register.handlebars
@@ -14,7 +14,7 @@
         <main>
             <div class="jumbotron">
                 <div class="container">
-                    <h1>Login Page</h1>
+                    <h1>Restaurant Sign Up Page</h1>
                 </div>
             </div>
 
@@ -25,12 +25,12 @@
                 <form class="register" action="/restaurants/register" method="POST">
                     <div class="form-group">
                         <label for="name">Restaurant Name</label>
-                        <input type="text" name="name" placeholder="Enter the Restaurant Name here" required>
+                        <input type="text" name="name" class="form-control"  placeholder="Enter the Restaurant Name here" required>
                     </div>
 
                     <div class="form-group">
                         <label for="address">Restaurant Address</label>
-                        <input type="text" name="address" placeholder="Enter the Restaurant Address here" required>
+                        <input type="text" name="address" class="form-control"  placeholder="Enter the Restaurant Address here" required>
                     </div>
 
                     <div class="form-group">
