--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Restaurant Table Reservation Page</title>
-    <link rel="stylesheet"  href="public/css/site.css">
+    <link rel="stylesheet"  href="../../public/css/site.css">
     
 </head>
 
@@ -14,30 +14,7 @@
             <h1>Restaurant Table Reservation Home Page</h1>
         </header>
 
-        <div class="topnav">
-            <a class="active" href="/">Home</a>
-            <a href="/customer/login">User Login</a>
-            <a href="/restaurants/login">Restaurant Login</a>
-            <a href="/reviews">Reviews</a>
-        </div>
-
-        <div class="col-sm-6">
-            <ul>
-                <li>
-                    <a id="reservation" href="/reservation"> Make a Table Reservation</a>
-                </li>
-                
-                <li>
-                    <a id="userRegister" href="/userRegister">User registration Page</a>
-                </li>
-                
-                <li>
-                    <a id="restaurantRegister" href="/restaurants/register">Restaurant Register Page</a>
-                </li>
-                
-            </ul>
-            
-        </div>
+        {{{body}}}
     </main>
 
     
