--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,44 +5,41 @@
     <meta charset="utf-8">
     <title>Restaurant Table Reservation Page</title>
     <link rel="stylesheet"  href="public/css/site.css">
-    
 </head>
 
 <body>
-    <main>
-        <header class="header">
+    
+        {{!-- <header class="header">
             <h1>Restaurant Table Reservation Home Page</h1>
-        </header>
+        </header> --}}
 
-        <div class="topnav">
+        <section>
+        <nav class="topnav">
             <a class="active" href="/">Home</a>
-            <a href="/customer/login">User Login</a>
-            <a href="/restaurants/login">Restaurant Login</a>
+            <a href="/customer/login">Customers</a>
+            <a href="/restaurants/login">Restaurant</a>
             <a href="/reviews">Reviews</a>
-        </div>
+        </nav>
+        </section>
 
-        <div class="col-sm-6">
-            <ul>
-                <li>
-                    <a id="reservation" href="/reservation"> Make a Table Reservation</a>
-                </li>
-                
-                <li>
-                    <a id="userRegister" href="/userRegister">User registration Page</a>
-                </li>
-                
-                <li>
-                    <a id="restaurantRegister" href="/restaurants/register">Restaurant Register Page</a>
-                </li>
-                
-            </ul>
-            
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>THE BEST MEMORIES ARE MADE AROUND THE TABLE</h1>
+                <p align="center" >Making a reservation at any restaurants in Hoboken city is now easy and takes just a couple of minutes</p>
+                <p align="center" ><a href="/customers/login" target="_blank" class="fcc-btn"  >Book a Table</a></p>
+            </div>
+        </div>  
+ 
+        <div class="image">
+            <div class="text">
+            <h1 align="center">REACH MILLIONS OF PEOPLE</h1>
+            <p align="center">Add your restaurants infront of millions and earn 3x profits from our listing</p>
+            <p align="center"><a href="/restaurants/register" target="_blank" class="fcc-btn">Add Your Restaurant</a></p>
         </div>
-    </main>
-
+        </div>
     
     <footer class="footer">
-        <p>Restaurant Table Reservation Page</p>
+        <p>@ Restaurant Table Reservation Page</p>
     </footer>
     
  
