--- a/public/css/site.css
+++ b/public/css/site.css
@@ -4,11 +4,11 @@
 
 html,
 body {
-	font-size: 14pt;
+	height: 100%;
 }
 
 body {
-	background: #dedede;
+	background:white;
 	font-family: Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
@@ -27,8 +27,7 @@ h3,
 h4,
 h5,
 h6 {
-	color: #222;
-	margin-bottom: 5px;
+	margin-bottom: 2px;
 }
 
 h1 {
@@ -61,28 +60,31 @@ p {
 }
 
 .footer {
-	position:fixed;
+	position:inherit;
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	background-color:lightgreen;
-	color: black;
+	background-color: rgb(29, 28, 28);
+	color: whitesmoke;
 	text-align: center;
 }
 
-.header{
+/* .header{
 	left: 0;
 	bottom: 0;
 	width: 100%;
 	background-color:lightgreen;
 	color: black;
 	text-align: center;
-}
+} */
 
 /* Add a black background color to the top navigation */
 .topnav {
 	background-color: #333;
 	overflow: hidden;
+	left: 0;
+	bottom: 0;
+	width: 100%;
   }
   
   /* Style the links inside the navigation bar */
@@ -97,12 +99,80 @@ p {
   
   /* Change the color of links on hover */
   .topnav a:hover {
-	background-color: #ddd;
+	background-color: rgb(245, 238, 238);
 	color: black;
   }
   
   /* Add a color to the active/current link */
   .topnav a.active {
-	background-color: #04AA6D;
+	background-color: rgb(218, 207, 207);
 	color: white;
   }
+
+  .table_reservation{
+	  background-color:powderblue;
+	  font-style: italic;
+  }
+
+  .fcc-btn {
+	background-color: #199319;
+	color: white;
+	padding: 15px 25px;
+	text-decoration: none;
+  }
+
+  /* The hero image */
+.hero-image {
+	/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/public/img/11.jpg");
+	opacity: inherit;
+	/* Set a specific height */
+	height: 75%;
+	/* Position and center the image to scale nicely on all screens */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+  }
+  
+  /* Place text in the middle of the image */
+  .hero-text {
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+  }
+
+  .centered {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+  }
+
+  .image {
+	/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/public/img/7.jpg");
+	opacity: inherit;
+	/* Set a specific height */
+	height: 75%;
+	/* Position and center the image to scale nicely on all screens */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+  }
+  
+  /* Place text in the middle of the image */
+  .text {
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+  }
+
+  
