--- a/views/restaurants/login.handlebars
+++ b/views/restaurants/login.handlebars
@@ -4,13 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
-         <link rel="stylesheet" href="/public/site.css" />
+         <link rel="stylesheet" href="/public/css/site.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
        
     </head>
 
     <body>
+        <section>
+        <nav class="topnav">
+            <a href="/">Home</a>
+            <a href="/customer/login">Customers</a>
+            <a class="active"  href="/restaurants/login">Restaurant</a>
+            <a href="/reviews">Reviews</a>
+        </nav>
+        </section>
         <main>
             <div class="jumbotron">
                 <div class="container">
@@ -35,7 +43,14 @@
                     <button type="submit"  class="btn btn-primary">Log In</button>
                 </form>
                 </fieldset>
+                <div>
+                <div>
+                    <h3><a href="/restaurants/register">Not a member? Sign Up!</a></h3>
+                </div>
+                </div>
             </div>
+
+            
            </main>
            {{#if hasError}}
                 {{#each errors}}
