--- a/views/restaurants/logout.handlebars
+++ b/views/restaurants/logout.handlebars
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="/public/css/site.css">
 </head>
 <body>
+    <section>
+        <nav class="topnav">
+            <a class="active" href="/">Home</a>
+            <a href="/customer/login">Customers</a>
+            <a href="/restaurants/login">Restaurant</a>
+            <a href="/reviews">Reviews</a>
+        </nav>
+        </section>
     <main>
         <div class="jumbotron">
             <div class="container">
