stopped from opening new tab

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,10 +8,6 @@
 </head>
 
 <body>
-    
-        {{!-- <header class="header">
-            <h1>Restaurant Table Reservation Home Page</h1>
-        </header> --}}
 
         <section>
         <nav class="topnav">
@@ -26,7 +22,7 @@
             <div class="hero-text">
                 <h1>THE BEST MEMORIES ARE MADE AROUND THE TABLE</h1>
                 <p align="center" >Making a reservation at any restaurants in Hoboken city is now easy and takes just a couple of minutes</p>
-                <p align="center" ><a href="/customers/login" target="_blank" class="fcc-btn"  >Book a Table</a></p>
+                <p align="center" ><a href="/customers/login"  class="fcc-btn">Book a Table</a></p>
             </div>
         </div>  
  
@@ -34,7 +30,7 @@
             <div class="text">
             <h1 align="center">REACH MILLIONS OF PEOPLE</h1>
             <p align="center">Add your restaurants infront of millions and earn 3x profits from our listing</p>
-            <p align="center"><a href="/restaurants/register" target="_blank" class="fcc-btn">Add Your Restaurant</a></p>
+            <p align="center"><a href="/restaurants/register" class="fcc-btn">Add Your Restaurant</a></p>
         </div>
         </div>
     
