--- a/views/restaurants/login.handlebars
+++ b/views/restaurants/login.handlebars
@@ -14,7 +14,7 @@
         <section>
         <nav class="topnav">
             <a href="/">Home</a>
-            <a href="/customer/login">Customers</a>
+            <a href="/customers/login">Customers</a>
             <a class="active"  href="/restaurants/login">Restaurant</a>
             <a href="/reviews">Reviews</a>
         </nav>
