--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <body>
     <div class="container">
-    <h1 class="Login">Login</h1>
-    <form method="POST" action="/customers/login" id="login-form">
-        <label  for="Email">Email</label>
-        <input class="form-control" type="text" id="Email" name="Email" placeholder="Email" required/> 
-        <label  for="password">Password</label>
-        <input class="form-control" type="password" id="password" name="password" placeholder="Password" required/>
-        <button type="submit" name="submitButton" id="submitButton" class="btn">Login</button>
-        {{#each errors}}
-            <div class = "error" id="errors">{{this}}</div>
-        {{/each}}
-    </form>
-    <a href="/users/signup">Don't have an account? Click Here!</a>
-</div>
-</body>
-</html>
+        <h1 class="Login">Login</h1>
+        <form method="POST" action="/customers/login" id="login-form">
+            <label  for="Email">Email</label>
+            <input class="form-control" type="text" id="Email" name="Email" placeholder="Email" required/> 
+            <label  for="password">Password</label>
+            <input class="form-control" type="password" id="password" name="password" placeholder="Password" required/>
+            <button type="submit" name="submitButton" id="submitButton" class="btn">Login</button>
+            {{#each errors}}
+                <div class = "error" id="errors">{{this}}</div>
+            {{/each}}
+        </form>
+        <a href="/customers/register">Don't have an account? Click Here!</a>
+    </div>
