--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Restaurant Table Reservation Page</title>
-    <link rel="stylesheet"  href="public/css/site.css">
+    <title>{{Title}}</title>
+    <link rel="stylesheet"  href="../../public/css/site.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -15,7 +17,7 @@
         <p>@ Restaurant Table Reservation Page</p>
     </footer>
     
- 
+
     {{!-- <script src="/public/js/form.js"></script> --}}
 </body>
 
