--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,3 +1,12 @@
+<section>
+        <nav class="topnav">
+            <a href="/">Home</a>
+            <a class="active" href="/customers/login">Customers</a>
+            <a href="/restaurants/login">Restaurant</a>
+            <a href="/reviews">Reviews</a>
+        </nav>
+</section>
+
     <div class="container">
         <h1 class="Login">Login</h1>
         <form method="POST" action="/customers/login" id="login-form">
