--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -1,6 +1,15 @@
+<section>
+        <nav class="topnav">
+            <a href="/">Home</a>
+            <a class="active" href="/customers/login">Customers</a>
+            <a href="/restaurants/login">Restaurant</a>
+            <a href="/reviews">Reviews</a>
+        </nav>
+</section>
+
 <div class="container ">
     <h1 class="Signup">Sign Up</h1>
-    <form method="POST" action="/users/signup" id="signup-form">
+    <form method="POST" action="/customers/register" id="signup-form">
             <div class="form-group">
                 <label for="firstName">Enter the FirstName</label>
                 <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name"required/>
@@ -26,7 +35,7 @@
                 <input type="text" class="form-control" id="state" name="state" placeholder="State" required/>
             </div>
              <div class="form-group">
-                <label for="password" >Enter the PhoneNumber</label>
+                <label for="password" >Enter the Password</label>
                 <input class="form-control" id="password" name="password" type="password" placeholder="Password" required/>
             </div>
         <button class="btn" type="submit" name="submitButton" id="submitButton">Signup</button>
