--- a/views/restaurants/login.handlebars
+++ b/views/restaurants/login.handlebars
@@ -29,7 +29,7 @@
             <div class="container">
                 <fieldset>
                 <legend>Enter User login Information Here</legend>
-                <form id="login-form" action="restaurants/login" method="post">
+                <form id="login-form" action="login" method="post">
                     <div class="form-group">
                         <label for="username">Restaurant Name</label>
                         <input type="text" class="form-control" name="restaurantName" placeholder="Enter the Restaurant Name here" required>
