--- a/views/restaurants/logout.handlebars
+++ b/views/restaurants/logout.handlebars
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/public/css/site.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
+<body>
 <section>
     <nav class="topnav">
         <a class="active" href="/">Home</a>
@@ -14,3 +28,6 @@
     </div>
     <a href="/" class="button">Home Page</a>
 </main>
+</body>
+</html>
+
