--- a/views/restaurants/private.handlebars
+++ b/views/restaurants/private.handlebars
@@ -1,9 +1,41 @@
 <section>
     <nav class="topnav">
-        <a class="active" href="/">Home</a>
-        <a href="/restaurants/profile">Profile</a>
-        <a href="/restaurants/reservation">Reservation</a>
+        <a  href="/">Home</a>
+        <a  class="active" href="/restaurants/private">Profile</a>
+        <a href="/restaurants/reservation">No. of Reservation</a>
         <a href="/reviews">Reviews</a>
     </nav>
 </section>
+
+<section>
+    <h1>Welcome, {{restaurant.name}}</h1>
+</section>>
+
+<section>
+    <div>
+        <label for="name">Restaurant Name</label>
+        <input type="text" id="name" value={{restaurant.name}} />
+    </div>
+
+    <div>
+        <label for="address">Address</label>
+        <input type="text" id="address" value={{restaurant.address}} />
+    </div>
+
+    <div>
+        <label for="email">Email ID</label>
+        <input type="email" id="email" value={{restaurant.email}} />
+    </div>
+
+    <div>
+        <label for="phone">Contact Number</label>
+        <input type="number" id="phone" value={{restaurant.phone}} />
+    </div>
+
+    <div>
+        <label for="description">About</label>
+        <textarea rows="4"> {{restaurant.description}} </textarea>
+    </div>
+</section>
+
 
