--- a/views/restaurants/register.handlebars
+++ b/views/restaurants/register.handlebars
@@ -57,8 +57,7 @@
 
                     <div class="form-group">
                         <label for="description">Description</label>
-                        <input type="text" class="form-control" name="description"
-                            placeholder="Write a short description about the restaurant here" required>
+                        <textarea rows="4" class="form-control" id="description" placeholder="Describe your Restaurant here"></textarea>
                     </div>
 
                     <div class="form-group">
