--- a/views/restaurants/private.handlebars
+++ b/views/restaurants/private.handlebars
@@ -1,41 +1,63 @@
-<section>
-    <nav class="topnav">
-        <a  href="/">Home</a>
-        <a  class="active" href="/restaurants/private">Profile</a>
-        <a href="/restaurants/reservation">No. of Reservation</a>
-        <a href="/reviews">Reviews</a>
-    </nav>
-</section>
+<!DOCTYPE html>
+<html>
 
-<section>
-    <h1>Welcome, {{restaurant.name}}</h1>
-</section>>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/public/css/site.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
 
-<section>
-    <div>
-        <label for="name">Restaurant Name</label>
-        <input type="text" id="name" value={{restaurant.name}} />
+<body>
+    <section>
+        <nav class="topnav">
+            <a href="/">Home</a>
+            <a class="active" href="/restaurants/private">Profile</a>
+            <a href="/restaurants/reservation">No. of Reservation</a>
+            <a href="/reviews">Reviews</a>
+        </nav>
+    </section>
+
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Welcome, {{restaurant.name}}</h1>
+        </div>
     </div>
 
-    <div>
-        <label for="address">Address</label>
-        <input type="text" id="address" value={{restaurant.address}} />
+    <div class="container">
+        <fieldset>
+            <legend>Profile</legend>
+            <div class="form-group">
+                <label for="name">Restaurant Name 
+                    <input type="text" id="name" class="form-control"value={{restaurant.name}} />
+                </label>
+            </div>
+
+            <div class="form-group">
+                <label for="address">Address <input type="text" id="address" class="form-control" value={{restaurant.address}} /></label> 
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email ID <input type="email" id="email" class="form-control" value={{restaurant.email}} /></label>
+            </div>
+
+            <div class="form-group">
+                <label for="phone">Contact Number <input type="number" id="phone" class="form-control" value={{restaurant.phone}} /></label>
+            </div>
+
+            <div class="form-group">
+                <label for="description">About </label>
+                <textarea rows="4" class="form-control"> {{restaurant.description}} </textarea>
+            </div>
+
+            <div class="form-group">
+                <p align="center"><a href="/restaurants/logout" class="fcc-btn">logout</a></p>
+            </div>
+        </fieldset>
     </div>
+</body>
 
-    <div>
-        <label for="email">Email ID</label>
-        <input type="email" id="email" value={{restaurant.email}} />
-    </div>
-
-    <div>
-        <label for="phone">Contact Number</label>
-        <input type="number" id="phone" value={{restaurant.phone}} />
-    </div>
-
-    <div>
-        <label for="description">About</label>
-        <textarea rows="4"> {{restaurant.description}} </textarea>
-    </div>
-</section>
-
-
+</html>
