--- a/views/restaurants/register.handlebars
+++ b/views/restaurants/register.handlebars
@@ -57,7 +57,7 @@
 
                     <div class="form-group">
                         <label for="description">Description</label>
-                        <textarea rows="4" class="form-control" id="description" placeholder="Describe your Restaurant here"></textarea>
+                        <textarea rows="4" class="form-control" id="description" name="description" placeholder="Describe your Restaurant here"></textarea>
                     </div>
 
                     <div class="form-group">
