--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -34,7 +34,8 @@
             <div class="error" id="errors">{{this}}</div>
             {{/each}}
         </form>
-        <a href="/customers/register">Don't have an account? Click Here!</a>
+        <br>
+        <h4><a href="/customers/register">Don't have an account? Click Here!</a></h4>
     </div>
     <br>
 </body>
