--- a/views/restaurants/login.handlebars
+++ b/views/restaurants/login.handlebars
@@ -21,15 +21,15 @@
         </nav>
     </section>
     <main>
-        <div class="jumbotron">
+       
             <div class="container">
                 <h1>Login Page</h1>
             </div>
-        </div>
+       
 
         <div class="container">
             <fieldset>
-                <legend>Enter User login Information Here</legend>
+                <legend><h4>Enter User login Information Here</h4></legend>
                 <form id="login-form" action="login" method="post">
                     <div class="form-group">
                         <label for="username">Restaurant Name</label>
@@ -48,7 +48,7 @@
             </fieldset>
             <div>
                 <div>
-                    <h3><a href="/restaurants/register">Not a member? Sign Up!</a></h3>
+                    <h4><a href="/restaurants/register">Not a member? Sign Up!</a></h4>
                 </div>
             </div>
         </div>
