review and reservation changes

--- a/views/reservation/table.handlebars
+++ b/views/reservation/table.handlebars
@@ -33,18 +33,18 @@
                             placeholder="Enter the Restaurant Name here" required>
                     </div>
                     <div class="form-group">
-                        <label for="Date">Date</label>
-                        <input type="number" class="form-control" name="Date" id="Date"
+                        <label for="reservationDate">Enter the Date</label>
+                        <input type="number" class="form-control" name="reservationDate" id="reservationDate"
                             placeholder="Enter the date here" required>
                     </div>
                     <div class="form-group">
-                        <label for="Time">Time</label>
-                        <input type="number" class="form-control" name="Time" id="Time"
+                        <label for="reservationTime">Enter the Time</label>
+                        <input type="number" class="form-control" name="reservationTime" id="reservationTime"
                             placeholder="Enter the time here" required>
                     </div>
                    <div class="form-group">
-                        <label for="tables">Number of people</label>
-                        <input type="number" class="form-control" name="table" id="tables"
+                        <label for="no_of_guests">Number of people</label>
+                        <input type="number" class="form-control" name="no_of_guests" id="no_of_guests"
                             placeholder="Enter Number of people" required>
                     </div>
                     <button type="submit" class="btn btn-primary">RESERVE A TABLE</button>
@@ -61,5 +61,4 @@
     {{/each}}
     {{/if}}
 </body>
-
 </html>
