--- a/views/review/write.handlebars
+++ b/views/review/write.handlebars
@@ -8,11 +8,11 @@
             <div class="container">
                 <div class="col form-group">
                     <label for="rating">Rating</label>
-                    <input type="number" class="form-control" id="rating" name="Rating">
+                    <input type="number" class="form-control" id="rating" name="rating" placeholder="Give rating">
                 </div>
                 <div class="col form-group">
                     <label for="review">Write review</label>
-                    <input type="text" class="form-control" id="review" name="write review">
+                    <input type="text" class="form-control" id="review" name="review" placeholder="write review">
                 </div>
                 <div id="review">
                     <button type="submit" class="btn" name="submitButton" id="submitButton">Write Review</button>
