--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -25,9 +25,9 @@
         <h1 class="Login">Login</h1>
         <form method="POST" action="/customers/login" id="login-form">
             <label for="Email">Email</label>
-            <input class="form-control" type="text" id="Email" name="Email" placeholder="Email" required />
+            <input class="form-control" type="text" id="Email" name="Email" placeholder="Enter Email ID" required />
             <label for="password">Password</label>
-            <input class="form-control" type="password" id="password" name="password" placeholder="Password" required />
+            <input class="form-control" type="password" id="password" name="password" placeholder="Enter Password" required />
             <br>
             <button type="submit" name="submitButton" id="submitButton" class="btn">Login</button>
             {{#each errors}}
