reservation and review changes

--- a/views/review/write.handlebars
+++ b/views/review/write.handlebars
@@ -4,7 +4,7 @@
             <h1>{{restaurants.name}}</h1>
         </a>
     </div>
-    <form method="POST" action="/reviews/write/{{restaurants._id}}" id="review-form" novalidate>
+    <form method="POST" action="/customer/{{customer._id}}" id="review-form" novalidate>
             <div class="container">
                 <div class="col form-group">
                     <label for="rating">Rating</label>
