added /privaite and /logout routes for restaurant and its working

--- a/views/restaurants/logout.handlebars
+++ b/views/restaurants/logout.handlebars
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/public/css/site.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/public/css/site.css" />
 </head>
 
 <body>
 <section>
     <nav class="topnav">
-        <a class="active" href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/customer/login">Customers</a>
         <a href="/restaurants/login">Restaurant</a>
         <a href="/reviews">Reviews</a>
@@ -26,7 +26,7 @@
             <h1>You've successfully logged out!</h1>
         </div>
     </div>
-    <a href="/" class="button">Home Page</a>
+    <p align="center"><a href="/" class="fcc-btn">Back to Home Page</a></p>
 </main>
 </body>
 </html>
