--- a/views/restaurants/private.handlebars
+++ b/views/restaurants/private.handlebars
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/public/css/site.css" />
+</head>
+
+<body>
 <section>
     <nav class="topnav">
         <a  href="/">Home</a>
@@ -7,35 +21,50 @@
     </nav>
 </section>
 
-<section>
-    <h1>Welcome, {{restaurant.name}}</h1>
-</section>>
+<main>
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Welcome, {{restaurant.name}}</h1>
+            </div>
+        </div>
 
 <section>
-    <div>
+    <div class="container">
+            <fieldset>
+                <legend>Your Restaurant Profile</legend>
+    <div class="form-group">
         <label for="name">Restaurant Name</label>
-        <input type="text" id="name" value={{restaurant.name}} />
+        <input type="text" class="form-control" id="name" value={{restaurant.name}} />
     </div>
 
-    <div>
+    <div class="form-group">
         <label for="address">Address</label>
-        <input type="text" id="address" value={{restaurant.address}} />
+        <input type="text" class="form-control"  id="address" value={{restaurant.address}} />
     </div>
 
-    <div>
+    <div class="form-group">
         <label for="email">Email ID</label>
-        <input type="email" id="email" value={{restaurant.email}} />
+        <input type="email" class="form-control"  id="email" value={{restaurant.email}} />
     </div>
 
-    <div>
+    <div class="form-group">
         <label for="phone">Contact Number</label>
-        <input type="number" id="phone" value={{restaurant.phone}} />
+        <input type="number" class="form-control"  id="phone" value={{restaurant.phone}} />
+    </div>
+
+    <div class="form-group">
+        <label for="description">About</label>
+        <textarea rows="4" class="form-control" > {{restaurant.description}} </textarea>
     </div>
 
     <div>
-        <label for="description">About</label>
-        <textarea rows="4"> {{restaurant.description}} </textarea>
+        <p align="center"><a href="/restaurants/logout" class="fcc-btn">Logout</a></p>
+    </div>
+    </fieldset>
     </div>
 </section>
+</main>
+</body>
+</html>
 
 
