fixed customers login and register routes

--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -24,8 +24,8 @@
     <div class="container">
         <h1 class="Login">Login</h1>
         <form method="POST" action="/customers/login" id="login-form">
-            <label for="Email">Email</label>
-            <input class="form-control" type="text" id="Email" name="Email" placeholder="Enter Email ID" required />
+            <label for="email">Email</label>
+            <input class="form-control" type="text" id="email" name="email" placeholder="Enter Email ID" required />
             <label for="password">Password</label>
             <input class="form-control" type="password" id="password" name="password" placeholder="Enter Password" required />
             <br>
