--- a/views/restaurants/logout.handlebars
+++ b/views/restaurants/logout.handlebars
@@ -15,7 +15,7 @@
 <section>
     <nav class="topnav">
         <a href="/">Home</a>
-        <a href="/customer/login">Customers</a>
+        <a href="/customers/login">Customers</a>
         <a href="/restaurants/login">Restaurant</a>
         <a href="/reviews">Reviews</a>
     </nav>
