adding the restaurant cards

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-
+    {{!-- <div class="content-wrap"> --}}
     {{{body}}}
-
     <footer class="footer">
         <p>@ Restaurant Table Reservation Page</p>
     </footer>
