--- a/views/users/profile.handlebars
+++ b/views/users/profile.handlebars
@@ -12,5 +12,6 @@
         <p>Email: {{customer.email}}</p>
         <br>
         <p>Reviews: {{customer.reviews}}</p>
+        <a href="/reservations">Make a reservation!</a>
         <a href="/customers/logout">Logout</a>
 </div>
