--- a/views/reservation/table.handlebars
+++ b/views/reservation/table.handlebars
@@ -26,7 +26,7 @@
             </div>
         <div class="container">
                 <legend>Fill the form</legend>
-                <form id="login-form" action="/customer/{{customer._id}}" method="post">
+                <form id="login-form" action="/customers/{{customer._id}}" method="post">
                     <div class="form-group">
                         <label for="restaurantName">Restaurant Name</label>
                         <input type="text" class="form-control" name="restaurantName" id="restaurantName"
