fixed the page view of /reservations and done some edge-cases testing

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -58,8 +58,9 @@ p {
 	font-size: 1rem;
 	line-height: 2;
 }
+
 .footer {
-	position:inherit;
+	position:relative;
 	left: 0;
 	bottom: 0;
 	width: 100%;
