--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -28,7 +28,12 @@
 	color: whitesmoke;
 	text-align: center;
 }
-  img{
+img{
     width:  100px;
     height: 100px;
-  }
+}
+
+h2{
+  color:blueviolet;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
