--- a/views/users/profile.handlebars
+++ b/views/users/profile.handlebars
@@ -1,17 +1,67 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/public/css/site.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
 <section>
     <nav class="topnav">
         <a href="/">Home</a>
-        <a class="active" href="/customers/login">Customers</a>
-        <a href="/restaurants/login">Restaurant</a>
+        <a class="active" href="/customers/private">Profile</a>
+        <a href="/reservations">Book a Table</a>
         <a href="/reviews">Reviews</a>
     </nav>
 </section>
-<div>
-    <h1>Hello, {{customer.firstName}}!</p>
-        <br>
-        <p>Email: {{customer.email}}</p>
-        <br>
-        <p>Reviews: {{customer.reviews}}</p>
-        <a href="/reservations">Make a reservation!</a>
-        <a href="/customers/logout">Logout</a>
-</div>
+
+<main>
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Welcome, {{customer.firstName}}</h1>
+        </div>
+    </div>
+
+    <section>
+        <div class="container">
+            <fieldset>
+                <legend>Your Profile</legend>
+                <div class="form-group">
+                    <label for="name">First Name</label>
+                    <input type="text" class="form-control" id="name" value={{customer.firstName}} />
+                </div>
+
+                <div class="form-group">
+                    <label for="address">Last Name</label>
+                    <input type="text" class="form-control" id="address" value={{customer.lastName}} />
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email ID</label>
+                    <input type="email" class="form-control" id="email" value={{customer.email}} />
+                </div>
+
+                <div class="form-group">
+                    <label for="phone">Contact Number</label>
+                    <input type="number" class="form-control" id="phone" value={{customer.phone}} />
+                </div>
+
+                <div class="form-group">
+                    <label for="description">City</label>
+                    <input type="text" class="form-control" id="city" value={{customer.city}} />
+                </div>
+
+                <div class="form-group">
+                    <label for="description">State</label>
+                    <input type="text" class="form-control" id="state" value={{customer.state}} />
+                </div>
+
+                <div>
+                    <p align="center"><a href="/restaurants/logout" class="fcc-btn">Logout</a></p>
+                </div>
+            </fieldset>
+        </div>
+    </section>
+</main>
