--- a/views/restaurants/register.handlebars
+++ b/views/restaurants/register.handlebars
@@ -15,7 +15,7 @@
     <section>
         <nav class="topnav">
             <a href="/">Home</a>
-            <a href="/customer/login">Customers</a>
+            <a href="/customers/login">Customers</a>
             <a class="active" href="/restaurants/login">Restaurant</a>
             <a href="/reviews">Reviews</a>
         </nav>
@@ -36,6 +36,11 @@
                         <label for="name">Restaurant Name</label>
                         <input type="text" name="name" class="form-control" placeholder="Enter the Restaurant Name here"
                             required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="name">Restaurant Official Website</label>
+                        <input type="url" name="website" class="form-control" placeholder="Enter the Restaurant website here" required>
                     </div>
 
                     <div class="form-group">
