--- a/views/restaurants/private.handlebars
+++ b/views/restaurants/private.handlebars
@@ -38,6 +38,10 @@
     </div>
 
     <div class="form-group">
+        <label for="name">Restaurant Website Link</label>
+        <input type="url" name="website" class="form-control" value={{restaurant.website}}>
+    </div>
+    <div class="form-group">
         <label for="address">Address</label>
         <input type="text" class="form-control"  id="address" value={{restaurant.address}} />
     </div>
