added customer reservation routes

--- a/views/reservation/openRestaurants.handlebars
+++ b/views/reservation/openRestaurants.handlebars
@@ -18,7 +18,7 @@
         <div class="container">
             <h2><a href={{this.website}} target="_blank"><b>{{this.name}}</b></a></h2>
             <p>{{this.description}}</p>
-            <button href="reservation/{{this._id}}">Make a Reservation Here</button>
+            <a href="reservations/restaurant/{{this._id}}"><button>Make a Reservation Here</button></a>
         </div>
     </div>
     {{/each}}
