--- a/views/reservation/table.handlebars
+++ b/views/reservation/table.handlebars
@@ -26,20 +26,21 @@
             </div>
         <div class="container">
                 <legend>Fill the form</legend>
-                <form id="login-form" action="/customers/{{customer._id}}" method="post">
-                    <div class="form-group">
+                <form id="login-form" action="/reservations/confirm/{{restaurant._id}}" method="post">
+                    {{!-- <div class="form-group">
                         <label for="restaurantName">Restaurant Name</label>
                         <input type="text" class="form-control" name="restaurantName" id="restaurantName"
                             placeholder="Enter the Restaurant Name here" required>
-                    </div>
+                    </div> --}}
+                    <h1>{{restaurant.name}}</h1>
                     <div class="form-group">
                         <label for="reservationDate">Enter the Date</label>
-                        <input type="number" class="form-control" name="reservationDate" id="reservationDate"
+                        <input type="date" class="form-control" name="reservationDate" id="reservationDate"
                             placeholder="Enter the date here" required>
                     </div>
                     <div class="form-group">
                         <label for="reservationTime">Enter the Time</label>
-                        <input type="number" class="form-control" name="reservationTime" id="reservationTime"
+                        <input type="time" class="form-control" name="reservationTime" id="reservationTime"
                             placeholder="Enter the time here" required>
                     </div>
                    <div class="form-group">
