--- a/views/reservation/restaurantReservation.handlebars
+++ b/views/reservation/restaurantReservation.handlebars
@@ -16,11 +16,10 @@
     {{#each reservations}}
     <div class="card">
         <div class="container">
-            <h4>Customer First Name:<b>{{customer.firstName}}</b></a></h4>
-            <h4>Customer Last Name:<b>{{customer.lastName}}</b></a></h4>
-            <h4>Number of people:<b>{{this.no_of_guests}}</b></a></h4>
-            <h4>Date:<b>{{this.reservationDate}}</b></a></h4>
-            <h4>Time:<b>{{this.reservationTime}}</b></a></h4>
+            <h4>Customer Name: <b>{{this.fullName}}</b></a></h4>
+            <h4>Number of people: <b>{{this.no_of_guests}}</b></a></h4>
+            <h4>Date: <b>{{this.reservationDate}}</b></a></h4>
+            <h4>Time: <b>{{this.reservationTime}}</b></a></h4>
         </div>
     </div>
     {{/each}}
