added review for restaurant

--- a/views/reservation/restaurantReservation.handlebars
+++ b/views/reservation/restaurantReservation.handlebars
@@ -6,7 +6,7 @@
         <a href="/">Home</a>
         <a href="/restaurants/private">Profile</a>
         <a class="active" href="/reservations">Reservations Made</a>
-        <a href="/reviews">Reviews</a>
+        <a href="/reviews/restaurant/{{reviewLink}}">Reviews</a>
     </nav>
 </section>
 
