--- a/views/restaurants/private.handlebars
+++ b/views/restaurants/private.handlebars
@@ -17,7 +17,7 @@
         <a  href="/">Home</a>
         <a  class="active" href="/restaurants/private">Profile</a>
         <a href="/restaurants/reservation">No. of Reservation</a>
-        <a href="/reviews">Reviews</a>
+        <a href="/reviews/restaurant/{{restaurant._id}}">Reviews</a>
     </nav>
 </section>
 
