--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -2,7 +2,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 350px;
-    height: 400px;
+    height: 450px;
     padding: 5px;
     margin: 10px;
     float:left;
@@ -37,3 +37,8 @@ h2{
   color:blueviolet;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+h4{
+  margin: 0.5;
+}
+
