--- a/views/users/profile.handlebars
+++ b/views/users/profile.handlebars
@@ -13,6 +13,7 @@
         <a href="/">Home</a>
         <a class="active" href="/customers/private">Profile</a>
         <a href="/reservations">Book a Table</a>
+        <a href="/customers/reservations">Reservations Made</a>
         <a href="/reviews">Reviews</a>
     </nav>
 </section>
