--- a/views/review/write.handlebars
+++ b/views/review/write.handlebars
@@ -1,3 +1,12 @@
+<section>
+    <nav class="topnav">
+        <a href="/customers/private">Profile</a>
+        <a href="/reservations">Book a Table</a>
+        <a href="/customers/reservations">Reservations Made</a>
+        <a class="active" href="/reviews/restaurant/{{restaurant._id}}">Review</a>
+    </nav>
+</section>
+
 <div class="container col-6">
     <div class="container col-6">
         <a href="/restaurants/{{restaurants._id}}" >
