add delete button to customer reservations handlebar

--- a/views/reservation/customerReservation.handlebars
+++ b/views/reservation/customerReservation.handlebars
@@ -1,4 +1,6 @@
 <head>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../public/css/cards.css">
 </head>
 <section>
@@ -26,6 +28,7 @@
             <input type="date" value={{this.reservationDate}} readonly />
             <h4>Time</h4>
             <input type="time" value= {{this.reservationTime}} readonly />
+            <p><button class="btn" ><i class="fa fa-trash" ></i></button></p>
         </div>
     </div>
     {{/each}}
