--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -2,7 +2,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 350px;
-    height: 450px;
+    height: 500px;
     padding: 5px;
     margin: 10px;
     float:left;
@@ -42,3 +42,8 @@ h4{
   margin: 0.5;
 }
 
+.delete{
+  position:absolute;
+  top:30px;
+    right:15px;
+}
