fixed bug with multiple reservations

--- a/views/reservation/customerReservation.handlebars
+++ b/views/reservation/customerReservation.handlebars
@@ -33,5 +33,14 @@
     </div>
     {{/each}}
     </section>
+    {{#if hasError}}
+    {{#each errors}}
+    <ul>
+        <li class="error">
+            {{this}}
+        </li>
+    </ul>
+    {{/each}}
+    {{/if}}
 </div>
 </section>
