--- a/views/reservation/customerReservation.handlebars
+++ b/views/reservation/customerReservation.handlebars
@@ -5,7 +5,7 @@
 </head>
 <section>
     <nav class="topnav">
-        <a href="/">Home</a>
+        {{!-- <a href="/">Home</a> --}}
         <a href="/customers/private">Profile</a>
         <a class="active" href="/customers/reservations">Reservations Made</a>
         <a href="/reviews">Reviews</a>
