--- a/views/users/profile.handlebars
+++ b/views/users/profile.handlebars
@@ -10,7 +10,7 @@
 
 <section>
     <nav class="topnav">
-        <a href="/">Home</a>
+        {{!-- <a href="/">Home</a> --}}
         <a class="active" href="/customers/private">Profile</a>
         <a href="/reservations">Book a Table</a>
         <a href="/customers/reservations">Reservations Made</a>
